/*
 * Copyright (C) 2019 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License
 */

syntax = "proto2";

package com.google.tuningfork;

enum LoadingState {
  LOADING = 1;
  NOT_LOADING = 2;
}
enum State {
  STATE_ONE = 1;
  STATE_TWO = 2;
  STATE_THREE = 3;
}
enum QualitySettings {
  FASTEST = 1;
  FAST = 2;
  SIMPLE = 3;
  GOOD = 4;
  BEAUTIFUL = 5;
  FANTASTIC = 6;
}
enum UnusedEnum {
  VALUE1 = 1;
  VALUE2 = 2;
  VALUE3 = 3;
}

message Annotation {
  enum NestedEnum {
    FASTEST = 1;
    FAST = 2;
    SIMPLE = 3;
    GOOD = 4;
    BEAUTIFUL = 5;
    FANTASTIC = 6;
  }
  optional LoadingState loading_state = 1;
  optional State state = 2;
  optional QualitySettings settings = 3;
  optional NestedEnum nested_enum = 4;
}
